<resources>
    <string name="app_name">myPlan</string>
    <string name="login_header">Login</string>
    <string name="login_user">Benutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login_btn">Login</string>
    <string name="login_user_hint">Anmeldedaten findest du <a href="https://kbs.itslearning.com/ContentArea/ContentArea.aspx?LocationType=1&amp;LocationID=43">hier</a></string>
    <string name="user_header">Meine Vertretungen</string>
    <string name="network_not_available">Netzwerkverbindung nicht verfügbar</string>
    <string name="timetable_not_up_to_date">Plan nicht aktuell</string>
    <string name="user_logout">Logout</string>
    <string name="user_refresh">Aktualiseren</string>
    <string name="user_refresh_success">Aktualisierung erfolgreich</string>
    <string name="user_refresh_failed">Aktualisierung fehlgeschlagen</string>
    <string name="user_settings">Einstellungen</string>
    <string name="user_introduction_title">Vertretungen anzeigen für</string>
    <string name="login_login_failed">Authentifizierung fehlgeschlagen</string>
    <string name="login_attempts">Versuche verbleibend</string>
    <string name="login_attempt">Versuch verbleibend</string>
    <string name="login_login_disabled">Anmeldung temporär deaktiviert</string>
    <string name="login_login_success">Anmeldung erfolgreich</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="pref_general_category">Bildschirm</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemein</string>

    <string name="pref_title_class">Klassenstufe</string>
    <string-array name="pref_general_list_titles">
        <item>Alle</item>
        <item>5a</item>
        <item>5b</item>
        <item>5c</item>
        <item>5d</item>
        <item>5e</item>
        <item>6a</item>
        <item>6b</item>
        <item>6c</item>
        <item>6d</item>
        <item>6e</item>
        <item>7a</item>
        <item>7b</item>
        <item>7c</item>
        <item>7d</item>
        <item>7e</item>
        <item>8a</item>
        <item>8b</item>
        <item>8c</item>
        <item>8d</item>
        <item>8e</item>
        <item>9a</item>
        <item>9b</item>
        <item>9c</item>
        <item>9d</item>
        <item>9e</item>
        <item>10. JgSt</item>
        <item>11. JgSt</item>
        <item>12. JgSt</item>
    </string-array>
    <string-array name="pref_general_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
    <string name="pref_title_timetable">Stundenplan</string>
    <string name="pref_title_timetable_pref">Stundenplanfilter</string>
    <string name="pref_timetable">Nur meine Vertretungen anzeigen</string>
    <string name="pref_title_timetable_desc">Stundenplan konfigurieren</string>
    <string name="pref_title_theme">Farbschema</string>
    <string-array name="pref_theme_list_titles">
        <item>Geräteinstellung übernehmen</item>
        <item>Automatisch bei Sonnenuntergang</item>
        <item>Hell</item>
        <item>Dunkel</item>
    </string-array>

    <string-array name="pref_theme_list_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Benachrichtigungen</string>

    <string name="pref_title_new_message_notifications">Benachrichtigungen</string>

    <string name="pref_notification_summary">Benachrichtigungen anzeigen</string>

    <string name="pref_title_vibrate">Vibration</string>

    <string name="pref_title_led">Licht</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Synchronisierung</string>

    <string name="pref_title_sync_frequency">Intervall</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minuten</item>
        <item>30 minuten</item>
        <item>1 Stunde</item>
        <item>3 Stunden</item>
        <item>6 Stunden</item>
        <item>Nie</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="title_activity_user_timetable">UserTimetable</string>
    <string name="usertimetable_header">Mein Stundenplan</string>
    <string name="tab_text_1">MO</string>
    <string name="tab_text_2">DI</string>
    <string name="tab_text_3">MI</string>
    <string name="tab_text_4">DO</string>
    <string name="tab_text_5">FR</string>
    <string name="action_reset">Stundenplan zurücksetzen</string>
    <string name="action_export">Stundenplan exportieren</string>
    <string name="action_import">Stundenplan importieren</string>

    <string name="teacher">Lehrer</string>
    <string name="subject">Fach</string>
    <string name="hour">Stunde</string>
    <string name="togglebtn_save">Speichern</string>
    <string name="togglebtn_edit">Bearbeiten</string>
    <string name="teacher_shortform">Lehrerkürzel</string>


    <string-array name="tt_base_subjects">
        <item>Fach auswählen</item>
        <item>Freistunde</item>
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>Französisch</item>
        <item>Latein</item>
        <item>Russisch</item>
        <item>Mathe</item>
        <item>Physik</item>
        <item>Informatik</item>
        <item>Chemie</item>
        <item>Biologie</item>
        <item>Kunst</item>
        <item>Musik</item>
        <item>Darstellendes Spiel</item>
        <item>Politik und Wirtschaft</item>
        <item>Geschichte</item>
        <item>e. Religion</item>
        <item>k. Religion</item>
        <item>Ethik</item>
        <item>Erdkunde</item>
        <item>Sport</item>
    </string-array>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>

</resources>
