<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_general_list_titles"
        android:entryValues="@array/pref_general_list_values"
        android:icon="@drawable/ic_school_black_24dp"
        android:key="general_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_class" />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_playlist_add_check_black_24dp_customcolor"
        android:key="general_timetable_pref"
        android:summary="@string/pref_timetable"
        android:title="@string/pref_title_timetable_pref" />

    <Preference
        android:icon="@drawable/ic_format_list_numbered_black_24dp"
        android:key="general_timetable"
        android:summary="@string/pref_title_timetable_desc"
        android:title="@string/pref_title_timetable">
        <intent android:action="android.intent.action.TIMETABLE" />
    </Preference>

    <PreferenceCategory android:title="@string/pref_general_category" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_theme_list_titles"
        android:entryValues="@array/pref_theme_list_values"
        android:icon="@drawable/ic_settings_brightness_black_24dp"
        android:key="general_theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_theme" />

</PreferenceScreen>
