<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_general_list_titles"
        android:entryValues="@array/pref_general_list_values"
        android:icon="@drawable/ic_school_black_24dp"
        android:key="general_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_class" />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_playlist_add_check_black_24dp_customcolor"
        android:key="general_timetable_pref"
        android:summary="@string/pref_timetable"
        android:title="@string/pref_title_timetable_pref" />

    <Preference
        android:icon="@drawable/ic_format_list_numbered_black_24dp"
        android:key="general_timetable"
        android:summary="@string/pref_title_timetable_desc"
        android:title="@string/pref_title_timetable">
        <intent android:action="android.intent.action.TIMETABLE" />
    </Preference>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_theme_list_titles"
        android:entryValues="@array/pref_theme_list_values"
        android:icon="@drawable/ic_settings_brightness_black_24dp"
        android:key="general_theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_theme" />

    <PreferenceCategory android:title="Benachrichtigungen">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:key="notifications_new_message"
            android:summary="@string/pref_notification_summary"
            android:title="@string/pref_title_new_message_notifications" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notifications_new_message"
            android:icon="@drawable/ic_vibration_black_24dp"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:icon="@drawable/ic_wb_iridescent_black_24dp"
            android:key="notifications_new_message_led"
            android:title="@string/pref_title_led" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Synchronisation">

        <ListPreference
            android:defaultValue="15"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />

    </PreferenceCategory>

</PreferenceScreen>