<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Timetable -->
    <item
        android:id="@+id/action_timetable"
        android:icon="@drawable/ic_format_list_numbered_grey_48dp"
        android:title="@string/pref_title_timetable"
        app:showAsAction="ifRoom" />

    <!-- Refresh -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_48dp"
        android:title="@string/user_refresh"
        app:showAsAction="ifRoom" />

    <!-- SettingsActivity -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/user_settings"
        app:showAsAction="never" />

    <!-- Logout -->
    <item
        android:id="@+id/action_logout"
        android:title="@string/user_logout"
        app:showAsAction="never" />

</menu>