<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_notifications_active_black_24dp"
        android:key="notifications_new_message"
        android:summary="@string/pref_notification_summary"
        android:title="@string/pref_title_new_message_notifications" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_new_message"
        android:icon="@drawable/ic_vibration_black_24dp"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:icon="@drawable/ic_wb_iridescent_black_24dp"
        android:key="notifications_new_message_led"
        android:title="@string/pref_title_led" />

</PreferenceScreen>
